fixed file_get_contents issue and locked all item record pages behind login

--- a/css/style.css
+++ b/css/style.css
@@ -382,4 +382,8 @@ ul#sort-links-list {
     font-weight: 700;
 }
 
+.guest-index {
+    padding: 1.5rem;
+}
+
 /** End Random **/
